# jiro-dreams-of-code

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.beads/: README.md  metadata.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: bandit.yml  ci.yml  codeql.yml  publish.yml  python-publish.yml
docs/: TECHNICAL_SPEC.md
docs/architecture/: 001-uv-frozen-sync.md  002-local-precommit-hooks.md
src/jiro/: __init__.py
src/jiro/agents/: __init__.py
src/jiro/assets/: __init__.py  loader.py
src/jiro/assets/prompts/: .gitkeep
src/jiro/assets/templates/commit/: .gitkeep
src/jiro/cli/: __init__.py  main.py
src/jiro/core/: __init__.py
src/jiro/trackers/: __init__.py
src/jiro/web/: __init__.py
tests/: conftest.py
tests/e2e/: conftest.py
tests/integration/: conftest.py
tests/unit/: conftest.py  test_placeholder.py
